--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
+    "petit-dom": "^0.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
